# MetaCNN

./: .gitignore  CMakeLists.txt  README.md
MetaCNN/: MetaCNN.h
MetaCNN/facilities/: null_param.h  test_var_type_dict.cpp  var_type_dict.h
data/: basic_struct.md
exercise/effectiveCPP/: README.md
exercise/effectiveCPP/chapter1/: README.md  inClass.cpp
exercise/reflection/: make_seq.cpp  reflection.cpp  reflection.md  static_reflection.cpp  traveltuple.cpp
exercise/taskflow/: README.md  data.h  dsl.h
exercise/uthread/: README.md  context_test.cpp  example.cpp
test/: char.cpp
test/facilities/: test_var_type_dict.cpp
